# myme.no

./: .gitignore  README.md  default.nix  feed-cors.conf  flake.nix  image.nix  index.html  myme-no-hs.cabal  nixpkgs.nix  projects.org  shell.nix  site.hs  stack.yaml  todo.org  tools.org
.github/workflows/: build-pages.yml  build.yml
css/: default.css
docker/: docker-compose.yml
js/: index.js
nix/: image.nix  nixpkgs.nix
posts/: 2017-12-21-hello-world.org  2017-12-24-move-to-spacemacs.org  2018-01-03-serves-you-right.org  2018-08-20-were-all-doomed.org  2018-11-13-deriving-io.org  2018-11-15-deriving-io.org  2019-01-03-parser-combinators.org  2019-01-28-dotfiles.org  2019-07-01-nixos-into-the-deep-end.org  2019-11-03-fallback-fallout.org  2019-11-21-fallback-facepalm.org  2020-01-26-nixos-for-development.org
site/: about.org  default.nix  index.html  projects.org
site/css/: default.css
site/images/: nix-tree-nixos-closure.webm  nixos-config-in-nix-repl.webm  virsh-help.webm  xchg-auto-update.webm  xchg-share-session.webm
site/js/: index.js
site/posts/: 2017-12-24-move-to-spacemacs.org  2018-01-03-serves-you-right.org  2018-08-20-were-all-doomed.org  2018-11-15-deriving-io.org  2019-01-03-parser-combinators.org  2019-01-28-dotfiles.org  2019-07-01-nixos-into-the-deep-end.org  2019-11-03-fallback-fallout.org  2019-11-21-fallback-facepalm.org  2020-01-26-nixos-for-development.org  2021-09-16-containers-a-la-nix.org  2021-11-07-dark-mode.org  (+17 more)
ssg/: default.nix  ssg.cabal  ssg.hs
templates/: default.html  post-list.html  posts.html
(+5 files in other folders)
