name:               myme-no-hs
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base
                  , hakyll
                  , pandoc
                  , pandoc-types
  ghc-options:      -threaded
                    -Wall
  default-language: Haskell2010
