name:               ssg
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable ssg
  main-is:          ssg.hs
  build-depends:    base
                  , filepath
                  , hakyll
                  , pandoc
                  , pandoc-types
                  , tagsoup
  ghc-options:      -Wall
                    -threaded
                    -rtsopts
                    -with-rtsopts=-N

  default-language: Haskell2010
